[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/square.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/effects/click2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/effects/click1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/effects/slide1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/effects/slide2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/effects/zoom.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/effects/ding.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/effects/respawn.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/effects/gong.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/effects/wong.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 23 )

[sub_resource type="Animation" id=2]
resource_name = "blocked"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -3 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio/Fail")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 2, 0.25 ),
"update": 0,
"values": [ Vector2( 30, 30 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio/Zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 1.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.7 )
}

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 29
script = ExtResource( 1 )

[node name="SpritePlayer" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Swivel" type="Sprite" parent="."]
modulate = Color( 0.67451, 0.243137, 0.243137, 1 )
position = Vector2( 32, 32 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayClockwise" type="RayCast2D" parent="."]
cast_to = Vector2( 64, 0 )
collision_mask = 5
collide_with_areas = true

[node name="RayAnticlockwise" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 64 )
collision_mask = 5
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.90735e-06, 1.90735e-06 )
current = true
zoom = Vector2( 30, 30 )
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_bottom = 0.1

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blocked = SubResource( 2 )
anims/intro = SubResource( 3 )

[node name="Audio" type="Node" parent="."]

[node name="ClockSwivel" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
pitch_scale = 0.05
bus = "Effects"

[node name="AntiSwivel" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
pitch_scale = 0.05
bus = "Effects"

[node name="FullSwivel" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
pitch_scale = 0.03
bus = "Effects"

[node name="ClockMove" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
pitch_scale = 1.5
bus = "Effects"

[node name="AntiMove" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
pitch_scale = 1.5
bus = "Effects"

[node name="Zoom" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Fail" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 11 )
bus = "Effects"

[node name="Checkpoint" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
pitch_scale = 0.9
bus = "Effects"

[node name="Respawn" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
bus = "Effects"

[node name="Goal" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
bus = "Effects"
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
